--- a/legal/stylesheet.css
+++ b/legal/stylesheet.css
@@ -36,6 +36,10 @@ body:has(.contact-nav:hover) .contact {
     opacity: 1;
 }
 
+body:has(.legal-nav:hover) .legal {
+    opacity: 1;
+}
+
 .tooltips {
     display: flex;
     flex-direction: row;
@@ -189,6 +193,4 @@ body:has(.contact-nav:hover) .contact {
     font-size: 20px;
     margin: 25px;
     transition: .2s;
-
 }
-
