--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
 
 html, body {
-    min-height: 100%;
+    min-height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
     margin: 0;
@@ -131,7 +131,7 @@ body {
     color: #111111;
     background-color: #ffffff;
     margin: 25px;
-    padding: 25px;
+    padding: 20px 25px;
     border-radius: 10px;
     transition: .2s;
 }
@@ -149,7 +149,7 @@ body {
 .nav-link {
     color: #ffffff;
     margin: 25px;
-    padding: 25px;
+    padding: 20px 25px;
     border-radius: 10px;
     transition: .2s;
 }
