--- a/stylesheet.css
+++ b/stylesheet.css
@@ -180,6 +180,7 @@ body::before {
     margin: 25px;
     background-color: #111111;
     color: #ffffff;
+    min-height: 1000px;
     width: 1000px;
     border: #ffffff solid 3px;
     border-radius: 10px;
